[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "day1"
path = "src/bin/day01.rs"

[[bin]]
name = "day2"
path = "src/bin/day02.rs"

[[bin]]
name = "day3"
path = "src/bin/day03.rs"

[[bin]]
name = "day4"
path = "src/bin/day04.rs"

[[bin]]
name = "day5"
path = "src/bin/day05.rs"

[dependencies]
