[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "day1"
path = "src/bin/day01.rs"

[[bin]]
name = "day2"
path = "src/bin/day02.rs"

[[bin]]
name = "day3"
path = "src/bin/day03.rs"

[[bin]]
name = "day4"
path = "src/bin/day04.rs"

[[bin]]
name = "day5"
path = "src/bin/day05.rs"

[[bin]]
name = "day6"
path = "src/bin/day06.rs"

[[bin]]
name = "day7"
path = "src/bin/day07.rs"

[[bin]]
name = "day8"
path = "src/bin/day08.rs"

[[bin]]
name = "day9"
path = "src/bin/day09.rs"

[[bin]]
name = "day10"
path = "src/bin/day10.rs"

[[bin]]
name = "day13"
path = "src/bin/day13.rs"

[dependencies]
bitflags = "1.3.0"
